--- a/index.html
+++ b/index.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Tribute Page About Thomas Sankara</title>
 </head>
 <body>
-   <h1>Thomas Sankra</h1> 
-   <img src="./images/thomas-sankara-1.jpeg" alt="picture of thomas sankara from a news conference" width='300px' height='300px'/>
+    <main id="main">
+   <h1 id="title">Thomas Sankra</h1> 
+   <figure id="img-div">
+   <img id='image' src="./images/thomas-sankara-1.jpeg" alt="picture of thomas sankara from a news conference"/>
+    <figcaption id="img-caption" >picture of thomas sankara from a news conference</figcaption>
+</figure>
+<p id="tribute-info" >Thomas Isidore Noël Sankara was a Burkinabé military officer, Marxist revolutionary, and pan-Africanist President of Burkina Faso from his coup in 1983 to his deposition and murder in 1987.</p>
+   <figure>
    <img src="./images/thomas-sankara-3.png" alt="picture of thomas sankara sitting in army uniform"/>
-   <img src="./images/thomas-sankara-2.png" alt="picture of thomas sankara in miliary uniform with map of africa behind" width='300' height='300'/>
-
-   <a href="https://www.youtube.com/watch?v=G7Vlt41HPUE&ab_channel=Afrikanews" > click here</a>
+   <figcaption>picture of thomas sankara sitting in army uniform</figcaption>
+</figure>
+   <figure>
+<img src="./images/thomas-sankara-2.png" alt="picture of thomas sankara in miliary uniform with map of africa behind" width='300' height='300'/>
+<figcaption>picture of thomas sankara in miliary uniform with map of africa behind</figcaption>
+</figure>
+   <a id="tribute-link" target="_blank" href="https://www.youtube.com/watch?v=G7Vlt41HPUE&ab_channel=Afrikanews" > click here</a>
 
 <h3>Interesting Facts About Thomas Sankara</h3>
 <ul>
@@ -24,5 +35,6 @@
     <li>To begin the country’s new era, he renamed the country from the French colonial Upper Volta to Burkina Faso, meaning “Land of Upright Man.”</li>
     <li>The pan Africanist’s political agenda was clear to see, but so was his vision in other sectors including health, environmental conservation, education, women empowerment and much more.</li>
 </ul>
+</main>
 </body>
 </html>
