added fullstop to 1st list item

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <h3>Interesting Facts About Thomas Sankara</h3>
 <ul>
-    <li>Former Burkina Faso President Thomas Isidore Noël Sankara, one of Africa’s most celebrated leaders, was killed in a military coup on 15 October 1987</li>
+    <li>Former Burkina Faso President Thomas Isidore Noël Sankara, one of Africa’s most celebrated leaders, was killed in a military coup on 15 October 1987.</li>
     <li>The popular leader commonly referred to as “Africa’s Che Guevara” is credited with laying the foundation for Burkina Faso’s ambitious drive for democratic, social and economic change.</li>
     <li>Sankara ruled for only four years, but left a lasting legacy, one that is celebrated not only in Africa but the world at large.</li>
     <li>The military captain turned pan-Africanist seized power in a popularly-supported coup in 1983, aged just 33 years old.</li>
